fix z-index to make caption hyperlink clickable

--- a/css/main.css
+++ b/css/main.css
@@ -43,13 +43,12 @@ h2 {
 }
 
 .sand {
-  /*position: relative;*/
+  position: relative;
   background: url(https://media.giphy.com/media/EXHXTLY7ntczK/giphy.gif);
   padding: 19%;
   opacity: 0.9;
-  z-index: -1;
-  bottom: 0;
-  
+  height: 100%;
+  /*z-index: -1; */
 }
 
 
@@ -69,7 +68,7 @@ h2 {
   z-index: -1;
 }*/
 .carousel-caption {
-    z-index: auto;
+    /*z-index: -1;*/
     padding: 5px;
     background-color: #525D72;
     opacity: 0.7;
@@ -88,9 +87,9 @@ h2 {
 .carousel .item {
   height: 500px;
 }*/
-/*.carousel .item {
-  z-index: -1;
-}*/
+.carousel .item {
+  z-index: auto;
+}
 
 .carousel-indicators {
   bottom: -40px;
